--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <h2>This is a idea1 change</h2>
 <h1>THis is idea1 conflict change</h1>
 <h1> This is master conflict change</h1>
+<h2>This is Dev2 change</h2>
